# timely

./: .gitignore  README.md  eslint.config.js  id,title,description,status,scheduled_st.csv  id,title,description,status,scheduled_st.txt  index.html  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
src-tauri/: .env  .taurignore  Cargo.toml  build.rs  diesel.toml  tauri.conf.json  timely.sqlite  timely.sqlite-shm  timely.sqlite-wal
src-tauri/.sqlx/: query-0f000a246e317c055129a776c78d5e8bdce7e118a3bffa84883e45a39a1b9b73.json  query-0f8751a50d33792a254e1094cdfd39a95815e8ff51ba245d7167a79dc514d78f.json  query-16308a321197f8d6f727d4e2160b5f45be744666470c920c50567648e3be277c.json  query-20c3093974ea3a0016c4473401394ea98731c3cf074c8fe835edc6c537e997ba.json  query-2905df07739b3c8b6bcb08bfd3af966dcb6a34528cf8a88762a7e8c5566d9813.json  query-374bb92492ed496d960f152df026a6437c5b2f695e45908ef4a9a34ae9b157ec.json  query-43d1b8e94f9b0782af0595b837e3a85b8c8c57cd81e8ef4764a71f68fba92bf0.json  query-55f839732fdcea5a51f6c9f6108d7ca723e6b7cc3a2fbda9f27e564f9bfcd028.json  query-57c83948338ca8b87e8f133deb289ee110d9d582a70d4303a1b6c569ec97a659.json  query-5f900c247e6918a9c89e5d379eb3db47419a8d8e71dec1f38ee4342f51031f12.json  query-6b6c53f4ed97ce747028dc7e284bff7e1cb0635dc012e25b9be5cd40ad569336.json  query-7a77277829fcb13f753dba674546a73033dffbb55c98412c9cd834edf83c507d.json  query-884297c1bbfe6abf1ab5f10f496900ff27b549a0d8390024bc55ff810d7c2a29.json  query-8c0ef4bc00edbc052af8b9d37538461ffcdd516eee25afc89cbeb3fb42c5b502.json  query-932f1d26dfda8ade96a31e23a3164944065535339bf5fb9d112d65dccc131058.json  query-9f7dca90866f8c9460d0a78e58001db7cf1dfee72d322acd04d01aa189f47b50.json  query-a84a79439c12d5dfe135a09809966eb030b3299a279451ae68b5caf83495a916.json  query-b4e2d3aa8f3b5cec18b0d7c331f6b2eb85d3a96cd1b56618b4384b8119884195.json  query-b7de9907783e446b5a28d97de2c7a6d8ac41e0fb2fa7eadd8a6d485c82832e97.json  query-c07f3a743049f3face7f94f4ad0a583e61427e8b45b8e6a73db352817a25cec8.json  query-cc668968b40892d06ce169749383019f494a641ecb6a7ac983457c0aa99e62c7.json  query-cccdd457e26f763b1a0ae9a88290dd7d978ccc3c69bea2724babe42ddcd2c832.json  query-d93daeb7410f4284a33ad286d4acaed639fd670fbf6064bfcfab0144dd29c942.json  query-db48fb93e9f22ee7da0786ae913d962b1da35b5b2b663f759f6af106650951b8.json  query-de7e17007741b6bf84f22c25cf2d0b3dcdb00f87209768eb815e30cfe51714d6.json  query-e520bbed860ef959a0f26d40639efc6873219f2328ba9fd7731c88c6c417db55.json  query-ff7b92accdc856c10ecbf5ddbad6960171e7b900abe377415549cc50487e897b.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migrations/: 20241111081114_create_tasks_table.sql  20241111081315_create_task_tags_table.down.sql  20241111081315_create_task_tags_table.sql  20241111081356_create_comments_table.sql  20241111081655_create_user_settings_table.sql  20241111081655_create_user_settings_table.up.sql  20241111082112_create_notification_settings_table.sql  20241117174006_create_task_work_history_table.sql  20241117174539_alter_tasks_table.sql  20241117183719_alter_tasks_table_remove_actual_dates.sql  20241117235555_add_notification_types.sql  20241231221355_update_work_history.sql  20250101023515_remove_task_actual_start_complete.sql
src-tauri/src/: data_access.rs  lib.rs  main.rs  models.rs  option_utils.rs  query_utils.rs  schema.rs  sql_utilties.rs
(+155 files in other folders)
