[package]
name = "timely"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "timely_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["./timely_macros"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
timely_macros = { path = "./timely_macros" }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "runtime-tokio"] }
